Set the header to fixed. on mobile

--- a/src/j8ahmed_portfolio/scss/components/global/_header.scss
+++ b/src/j8ahmed_portfolio/scss/components/global/_header.scss
@@ -1,13 +1,15 @@
 .site_header{
-    position: absolute;
+    margin-bottom: 5rem;
+    position: fixed;
     z-index: 99;
     width: 100%;
     // height: 100%;
-    margin-bottom: 5rem;
+    background: linear-gradient(180deg, rgba($primary, 0.8), rgba(0,0,0,0) );
     overflow-x: hidden;
 }
 .expand_site_header{
     height: 100%;
+    background: $primary;
 }
 .site_header_navbar_container{
     max-width: 1000px;
@@ -115,7 +117,6 @@
 }
 .show_mobile_menu_container{
     left: 0;
-    box-shadow: $shadow;
 }
 .mobile_menu_container{
     margin: 0;
@@ -201,6 +202,7 @@
         position: relative;
         width: 100%;
         height: auto;
+        background: none;
     }
     .site_header_navbar_mobile_menu_button_container{
         display: none;
